# projetoTo-Do/Backend/Routes/routesUsuario.js
@@ -4,5 +4,5 @@ import UsuarioController from "../Controllers/UsuarioController.js";
 const routesUsuario = new Router();
 // Rotas da API
 routesUsuario.post("/CreateUsuario", UsuarioController.Create);
-// routesTarefa.get("/GetAll", TarefaController.GetAll);
+routesUsuario.post("/Login", UsuarioController.Login);
 export default routesUsuario;
